# TextGO

./: .pre-commit-config.yaml  package.json  pnpm-lock.yaml
messages/: en.json  zh-CN.json
src-tauri/: Cargo.toml
src/lib/: stores.svelte.ts
src/lib/components/: Updater.svelte  index.ts
src/routes/(main)/: +layout.svelte
src/routes/(main)/settings/: +layout.svelte
src/routes/(main)/settings/general/: +page.svelte
