[package]
name = "TextGO"
version = "0.9.1"
description = "A customizable text selection popup tool"
authors = ["Xylitol <jam.xylitol@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-http = { version = "2.5.7", features = ["unsafe-headers"] }
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
log = "0.4.29"
fern = "0.7.1"
tokio = { version = "1.49", features = ["process", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clipboard-rs = "0.3.3"
wildmatch = "2.6.1"
enigo = "0.6.1"
rdev = { git = "https://github.com/C5H12O5/rdev", rev = "5a5596d" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "da9c9a8" }
plist = "1.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
] }
